# IGVC2014

./: .gitignore  .gitmodules  README.md  calibration.yaml  install.sh
CameraSettings/: 50-0536871844.txt
EciDemos/: EciDemo109.c  EciDemo109.h  FileVersion.rh  Makefile
EciDemos/LinuxEciDemo/: LinuxEciDemo.c  LinuxEciDemo.cbp
dotfiles/: .bashrc
dotfiles/dev_machine/: .vimrc
dotfiles/field_machine/: .bashrc  .vimrc
etc/: filter.py  filter_repub.py  filter_repub_camera.py  filter_repub_kalman.py  filter_repub_segway.py  filter_repub_vectornav.py  homography_filter.py  jaus_install.sh  plotimu.py  plotodoms.py  usb_cam_publish.py
etc/ardupy/: ardupy.py
etc/auton_light/: auton_light_controller.py  getproc.sh
etc/plot/: getrpy.py  plotimu.py  plotodoms.py
image_processing/line_detection/: .gitignore  .gitignore.swp  CMakeLists.txt  lines.cpp
init/: hokuyo_mapping.launch  hokuyo_mapping.rviz
jjj/mapper/: mapper.py
joystick_ctrl/: joystick_ctrl.py  joystick_ctrl_hack.py  teleop_twist_joystick.py  test_shield.py
launch_files/: cam.launch  camera.launch  move_base.launch  start.sh  test.launch  tmp.launch  unwarp_settings.launch
launch_files/U/: manifest.xml
launch_files/config_files/: Temp  base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml  sbpl_global_params.yaml
launch_files/rosparams/: calibration.yaml  ros.yaml
line_detection/: line_detection.py
nn/mako_grabber/: package.xml.tmp
oldsrc/flagmaster/: CMakeLists.txt
oldsrc/image_unwarp/: package.xml
oldsrc/joystick_ctrl/: package.xml
oldsrc/launch_files_old/: move_base.launch  move_base.launch~
oldsrc/odomcombiner/: package.xml
ros/: default.rviz  frames.gv  laser_test.launch
src/auton_light/: CMakeLists.txt  package.xml
src/flagmaster/: CMakeLists.txt  package.xml
src/iop_challenge/: CMakeLists.txt  package.xml
src/iop_challenge/src/: iop_challenge.cpp
(+161 files in other folders)
