<?xml version="1.0"?>
<package>

    <name>image_unwarp</name>
    <version>0.0.0</version>
    <description>A package for calibrating and unwarping omnidirectional camera
        images taken with a mirror. Polynomial interpolation symmetric around a
        center point creates a function that can describe the entire image warping
        process based on a picture with a given set of points. OpenCV can use a
        chessboard to find such points in a calibration image as long as the
        points on the chessboard intersect with the center point.
    </description>

    <maintainer email="philip@yale.edu">Philip Piper</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>

</package>
